# FFmpegAndroidDemo

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg_cmd.cpp  native-lib.cpp
app/src/main/cpp/include/: android_log.h  cmd.c  cmd.h  ffmpeg_cmd.c  ffmpeg_cmd.h  jni_utils.cpp  jni_utils.h  remuxer.h
app/src/main/cpp/include/libavcodec/: avcodec.h  mathops.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/libavresample/: avresample.h  version.h
app/src/main/cpp/include/libavutil/: internal.h  timer.h
app/src/main/java/com/cy/androidcmd/: BaseActivity.java  CmdCommandList.java  FileUtils.java  IOListener.java  IOUtils.java  JniUtils.java  MainActivity.java
app/src/main/java/com/cy/ffmpegcmd/: BaseActivity.java  CmdCallback.java  CmdCommandList.java  FileUtils.java  IOListener.java  IOUtils.java  JniUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
